# toolkitr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/llmtoolbox/: __init__.py  _registry.py
src/minitools/: __init__.py  _registry.py  _schema.py  _serializer.py
src/toolkitr/: __init__.py  _registry.py  _serializer.py
tests/: test_openai.py  test_registry.py  test_schema.py  test_smart_call.py
