[tool.poetry]
name = "minitools"
version = "0.1.0"
description = "Tool calling made easy"
authors = ["Manolo Santos <manolo.santos@gmail.com>"]
readme = "README.md"
packages = [{ include = "minitools", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
openai = "^1.58.1"
pytest = "^8.2"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
