[project]
name = "minitools"
version = "0.1.1"
description = "Tool calling made easy"
authors = [{ name = "Manolo Santos", email = "manolo.santos@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"

[dependency-groups]
test = [
    "openai>=1.58.1,<2",
    "pytest~=8.2",
    "pytest-asyncio>=0.25.0,<0.26",
]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = ["src/minitools"]

[tool.hatch.build.targets.wheel]
include = ["src/minitools"]

[tool.hatch.build.targets.wheel.sources]
"src/minitools" = "minitools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
